<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewMinTemperature"
        android:layout_width="102dp"
        android:layout_height="54dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="59dp"
        android:fontFamily="@font/acme"
        android:gravity="center|left"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTemp" />

    <TextView
        android:id="@+id/textMinTemperature"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/acme"
        android:text="@string/minTemperature"
        android:textColor="@color/blue_darken_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinTemperature" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/bungee"
        android:text="@string/update_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/Icon"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="179dp"
        android:layout_height="91dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/bungee"
        android:gravity="center_horizontal|top"
        android:password="false"
        android:text="0 °C"
        android:textColor="@color/blue_darken_1"
        android:textSize="50sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Icon" />

    <TextView
        android:id="@+id/textViewMaxTemperature"
        android:layout_width="102dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/acme"
        android:gravity="center|left"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTemp" />

    <TextView
        android:id="@+id/textMaxTemperature"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/acme"
        android:text="@string/maxTemperature"
        android:textColor="@color/blue_darken_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaxTemperature" />

    <TextView
        android:id="@+id/textWindSpeed"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/acme"
        android:text="@string/windSpeed"
        android:textColor="@color/blue_darken_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWindSpeed" />

    <TextView
        android:id="@+id/textViewWindSpeed"
        android:layout_width="102dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:fontFamily="@font/acme"
        android:gravity="center|left"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTemp" />

    <TextView
        android:id="@+id/textViewWindDeg"
        android:layout_width="102dp"
        android:layout_height="54dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="61dp"
        android:fontFamily="@font/acme"
        android:gravity="center|left"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTemp" />

    <TextView
        android:id="@+id/textWindDeg"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/acme"
        android:text="@string/windDeg"
        android:textColor="@color/blue_darken_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWindDeg" />

</androidx.constraintlayout.widget.ConstraintLayout>